Squash search error when name doesn't exist + Fixed transitions that pissed me off

--- a/src/www/react/styles/Footer.scss
+++ b/src/www/react/styles/Footer.scss
@@ -6,8 +6,11 @@ footer {
   align-items: center;
   letter-spacing: 1px;
 
+  a {
+    transition: $transition-short;
+  }
+
   a:hover {
     color: $highlight;
-    transition: all 0.2s ease-in-out;
   }
 }
