--- a/src/www/react/styles/Shilling.scss
+++ b/src/www/react/styles/Shilling.scss
@@ -40,10 +40,10 @@
 
   font-size: 24px;
   width: 70%;
+  transition: $transition-short;
 
   &:hover {
     background-color: $secondary-light;
-    transition: all 0.2s ease-in-out;
   }
 
   img {
