--- a/src/www/react/styles/Stats.scss
+++ b/src/www/react/styles/Stats.scss
@@ -31,10 +31,10 @@
     margin: 0px 10px;
     border-top: 1px solid $primary;
     font-size: 20px;
+    transition: $transition-short;
 
     &:hover {
       border-color: $highlight;
-      transition: all 0.2s ease-in-out;
     }
   }
 
