--- a/src/www/react/styles/Variables.scss
+++ b/src/www/react/styles/Variables.scss
@@ -4,3 +4,4 @@ $secondary: #4f0a1a;
 $secondary-light: #751128;
 $highlight: #df164b;
 $shadow: 0px 0px 5px 3px rgba(0,0,0,0.75);
+$transition-short: all 0.2s ease-in-out;
